[tool.poetry]
name = "africanwhisper"
version = "0.9.3"
description = "A package for fast fine-tuning and API endpoint deployment of the Whisper model, specifically developed to accelerate Automatic Speech Recognition (ASR) for African languages."
authors = ["Kevin Kibe <keviinkibe@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KevKibe/African-Whisper"
packages = [
    { include = "deployment", from = "src" },
    { include = "training", from = "src" }
    ]
include = ["src/deployment/faster_whisper/mel_filters.npz"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "4.39.2"
datasets = "2.17.0"
librosa = "0.10.1"
evaluate = "0.4.1"
jiwer = "3.0.3"
bitsandbytes = "0.42.0"
accelerate = "0.28.0"
peft = "0.9.0"
numpy = "1.26.4"
wandb = "0.16.6"
holoviews = "1.18.3"
panel = "1.3.8"
gradio = "4.24.0"
pytube = "15.0.0"
tf-keras = "2.16.0"
tensorflow = "2.16.1"
keras = "3.1.1"
scipy = "1.12.0"
tensorflow-probability = "0.24.0"
yt-dlp = "2023.11.14"
faster-whisper = "1.0.0"
python-dotenv = "1.0.1"
pyannote-audio = "3.1.1"
nltk = "3.8.1"
torchvision = "0.17.2"
ctranslate2 = "4.1.0"
pandas = "2.0.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



