[metadata]
name = africanwhisper
author = Kevin Kibe
version = 0.2.5
author_email = keviinkibe@gmail.com
description = A package for fast fine-tuning and API endpoint deployment of Whisper model specifically developed to accelerate Automatic Speech Recognition(ASR) for African Languages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KevKibe/African-Whisper
license = MIT

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pip==24.0
    transformers==4.39.2
    datasets==2.18.0
    librosa==0.10.1
    evaluate==0.4.1
    jiwer==3.0.3
    bitsandbytes==0.43.0 
    accelerate==0.28.0
    peft==0.9.0
    python-dotenv==1.0.1
    numpy==1.26.4
    wandb==0.16.5
    holoviews==1.18.3
    panel==1.3.8
    gradio==4.21.0
    pytube==15.0.0
    tf-keras==2.16.0
    tensorflow==2.16.1
    keras==3.1.1
    scipy==1.12.0
    tensorflow-probability==0.24.0
    
package_dir=
    =src

[options.packages.find]
where=src

