[package]
name = "rustinference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
cpal = "0.15.3"
hf-hub = "0.3.2"
tokenizers = "0.19.1"
anyhow = "1.0.82"
clap = "4.5.4"
rand = "0.8.5"
symphonia = "0.5.4"
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.2"
serde_json = "1.0.116"
byteorder = "1.5.0"
dasp = { version = "0.11", features = ["all"] }
hound = "3"
find_folder = "0.3"
ringbuf = "0.3.3"






